[package]
name = "parsely"
version = "0.1.0"
authors = ["John Doe <smthwnsn14@mail.com>"]
edition = "2018"

[profile.release]
debug = true
codegen-units = 1
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"